--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <title>Document</title>
     </head>
     <body>
-        <h1 style="background-color: blue;">Hello World</h1>
+        <h1 style="background-color: red;">Hello World</h1>
     </body>
 </html>
